[FIX] web_editor: fix for the table on elearning by making the table scrollable horizontally
The table view in elearning is very messy. If there's a lot of content, then the content overlaps.
This is noticable especially in the small devices. A fix would be to make just the table scrollable, so it stays clean.

Steps To Reproduce on Runbot:
1. Go to elearning.
2. Go to "view course" on any courses.
3. Add an article content.
4. In the edit mode, add a table like size 11*2, and keep typing on a cell, eventually the text will start
overflowing.

opw-4317744

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -148,6 +148,14 @@ html, body {
     }
 }
 
+.elearning-table-container {
+    overflow-x: auto;
+}
+
+.elearning-table-container > table {
+    table-layout: auto !important;
+}
+
 // List
 ul.o_checklist {
     list-style: none;
